# arithmetic

.claude/scripts/: claude_api.py  pyproject.toml
.github/workflows/: on-merge-cascade.yml  process-ready.yml
