[project]
name = "epik-scripts"
version = "0.1.0"
description = "Utility scripts for Epik project automation"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
